# routes/api.php
@@ -37,6 +37,7 @@ Route::delete('/deleteTypeTrining/{id_tipoEjercicio}', [EjercicioController::cla
 
 Route::post('/createEjercicio', [EjercicioController::class, 'storeEjercicio']);
 Route::get('/getAllEjercicios', [EjercicioController::class, 'getAllEjercicios']);
+Route::put('/updateEjercicio/{id_ejercicio}', [EjercicioController::class, 'updateEjercicio']);
 
 Route::group(['middleware' => ['auth:sanctum']], function () {
     Route::get('/check-status',[UserController::class,'checkStatus']);
